# lakehouse-lab

./: .editorconfig  .env  .env.slim  .gitignore  .pre-commit-config.yaml  .yamllint.yml  404.html  Makefile  README.md  airflow.env  docker-compose.airflow.yml  docker-compose.mini.airflow.yml  docker-compose.slim.yml  docker-compose.spark.yml  docker-compose.yml  go.work  go.work.sum  index.html  mkdocs.yml  nx.json  objects.inv  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/: ci-settings.yml
.github/workflows/: ci-main.yml  default.yml  docs.yml  iac.yml
.volumes/jmx_exporter/: kafka-broker.yml
dependency-graph/static/: environment.js
deploy/composer/: project.json
deploy/composer/.local/: service.json  shared.json
deploy/docker/airflow/: requirements.txt
deploy/docker/prod/spark/: Dockerfile.base  Dockerfile.iceberg  Dockerfile.python
deploy/docker/spark/: Dockerfile
deploy/iac/tf-aws/: .terraform.lock.hcl  main.tf  providers.tf  terraform.tfvars  variables.tf
deploy/iac/tf-gcp/: .gitignore  project.json
deploy/iac/tf-gcp/src/: main.tf  providers.tf  variables.tf  versions.tf
deploy/iac/tf-local/: project.json
deploy/iac/tf-local/src/: main.tf  providers.tf  variables.tf  versions.tf
deploy/k8s/: project.json
deploy/k8s/apps/: minio-app.yaml  spark-operator-app.yaml
deploy/k8s/manifests/jobs/: pi-iceberg.yaml  pi-scala.yaml  pi.yaml  test-spark-iceberg-minio.yaml
deploy/k8s/manifests/secrets/: repo-cred.yaml.gpg
deploy/k8s/resources/minio/: deploy.yaml
deploy/k8s/secrets/: repo-cred.yaml.gpg
deploy/k8s/temp/: values.yaml
deploy/scripts/: test_iceberg.py
deploy/scripts/dags/: hello.py
docs/: getting-start.md  index.md  summary.md
docs/papers/: 01-article.md  02-article.md  03-article.md  04-article.md
getting-start/: index.html
libs/ddd/adapters/api/: README.md  project.json  pyproject.toml
libs/ddd/adapters/controllers/: README.md  project.json  pyproject.toml
libs/ddd/entities/: README.md  project.json  pyproject.toml
libs/ddd/value-objects/: README.md  project.json  pyproject.toml
libs/fake-factory/: README.md  project.json  pyproject.toml
libs/fake-factory/fake_factory/: base_factory.py
libs/fake-factory/tests/: test_fraud_device_factory.py  test_fraud_transaction_factory.py  test_fraud_user_profile_factory.py
libs/settings/emulator-settings/: README.md  project.json  pyproject.toml
libs/shared/cliargs/: README.md  project.json  pyproject.toml
libs/shared/logger/: README.md  project.json  pyproject.toml
monitoring/grafana/dashboards/: 14282_rev1_cadvisor.json  18276_rev1_kafka.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: alert_rules.yml
papers/01-article/: index.html
papers/02-article/: index.html
papers/03-article/: index.html
papers/04-article/: index.html
reference/libs/fake-factory/: index.html
reference/services/airflow-app/: index.html
reference/services/data-emulator/: index.html
reference/tools/nx-compose/: index.html
scripts/: gen_doc_stubs.py  init-multiple-dbs.sh
search/: search_index.json
services/airflow-app/: Dockerfile  README.md  project.json  pyproject.toml
services/airflow-app/dags/: fraud_pipeline_dag.py
services/airflow-app/plugins/: start_emulator_operator.py  status_emulation_operator.py
services/data-emulator/: Dockerfile  README.md  openapi.md  project.json  pyproject.toml
services/data-emulator/docs/openapi/: openapi.json  swagger.yaml
services/data-emulator/emulator/cmd/: main.py  signal_handler.py
services/lake-actors-cluster/: Dockerfile  docker-compose.yml  hack.sh  project.json
services/lake-actors-cluster/consumer-actor/: go.mod  project.json
services/lake-actors-cluster/server-actor/: Dockerfile  go.mod  project.json
summary/: index.html
tools/nx-compose/: README.md  generators.json  jest.config.ts  package.json  project.json
(+340 files in other folders)
