[tool.coverage.run]
branch = true
source = ["emulator"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-fail-under=80
 --cov-report html:'../../coverage/./services/data-emulator/html'
 --cov-report xml:'../../coverage/./services/data-emulator/coverage.xml'
 --html='../../reports/./services/data-emulator/unittests/html/index.html'
 --junitxml='../../reports/./services/data-emulator/unittests/junit.xml'
"""

[project]
name = "services-data-emulator"
version = "0.0.0"
description = "Data emulator service"

[tool.poetry]
name = "services-data-emulator"
version = "1.0.0"
description = "Data emulator service"
authors = []
license = "Proprietary"
readme = "README.md"

[[tool.poetry.packages]]
include = "emulator"

[tool.poetry.dependencies]
python = ">=3.9,<4"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.0"

[tool.poetry.dependencies.shared-logger]
path = "../../libs/shared/logger"
develop = true

[tool.poetry.dependencies.shared-cliargs]
path = "../../libs/shared/cliargs"
develop = true

[tool.poetry.dependencies.settings-data-emulator]
path = "../../libs/settings/emulator-settings"
develop = true

[tool.poetry.dependencies.ddd-adapters-api]
path = "../../libs/ddd/adapters/api"
develop = true

[tool.poetry.scripts]
emulator = "emulator.cmd.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
